--- a/vaulthunters.html
+++ b/vaulthunters.html
@@ -3,7 +3,7 @@
     
     <head>
         <meta charset="utf-8" />
-        <title>Hyperion Corp.</title>
+        <title>Vault Hunters - Hyperion Corp.</title>
         
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css" />
